# inf568

chacha20_poly1305_aead/: Cargo.toml  README.md
chacha20_poly1305_aead/src/: lib.rs
chacha20_poly1305_aead/src/aead/: mod.rs  tests.rs
chacha20_poly1305_aead/src/chacha20/: mod.rs  tests.rs
chacha20_poly1305_aead/src/poly1305/: mod.rs  tests.rs
curve25519-kem/: Cargo.toml  README.md
curve25519-kem/src/: hash.rs  kem.rs  pke.rs
curve25519-kem/src/chacha20/: tests.rs
curve25519-kem/src/curve25519_kem/: pke.rs
curve25519-kem/src/shake128/: keccack.rs  mod.rs  sponge.rs
curve25519-kem/src/shake128/keccack/: chi.rs  iota.rs
curve25519_kem/: Cargo.toml
curve25519_kem/src/: lib.rs  utils.rs
curve25519_kem/src/chacha20/: mod.rs
curve25519_kem/src/curve25519_kem/: kem.rs  mod.rs  tests.rs
curve25519_kem/src/shake128/: state.rs  tests.rs
curve25519_kem/src/x25519/: mod.rs  tests.rs
ed25519/: Cargo.toml  README.md
ed25519/src/: lib.rs  utils.rs
ed25519/src/arithmetic/: constants.rs  mod.rs  point.rs
ed25519/src/keygen/: mod.rs  tests.rs
ed25519/src/sign/: mod.rs  tests.rs
ed25519/src/verify/: mod.rs  tests.rs
frodokem_640_shake/: Cargo.toml  README.md
frodokem_640_shake/src/: frodo640.rs  lib.rs
frodokem_640_shake/src/frodo/: encoding.rs  mod.rs  packing.rs  prmatrix.rs  sampling.rs  types.rs
frodokem_640_shake/src/frodokem/: constants.rs  mod.rs  (+3 more)
poly1305/: Cargo.toml
shake128/: Cargo.toml  README.md  cargo
shake128/src/: keccack.rs  lib.rs  main.rs  shake128.rs  sponge.rs
x25519/: Cargo.toml  README.md
x25519/src/: lib.rs
(+18 files in other folders)
